UPDATED-PAPAPARSE changing the module name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vtex/react-csv-parse",
+  "name": "@privoro/react-csv-parse",
   "version": "3.0.2",
   "description": "react-csv-parse React component",
   "main": "lib/index.js",
