--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com:vtex/react-csv-parse.git"
+    "url": "git://github.com:privoro/react-csv-parse.git"
   },
   "dependencies": {
     "papaparse": "^5.3.0",
